fixing contrast errors

--- a/css/theme/myplanet.css
+++ b/css/theme/myplanet.css
@@ -356,7 +356,7 @@ html {
   .reveal .slides section.color--dark .logo {
     background-image: url("../../lib/myplanet/logo/white/mark-outline.svg"); }
 
-.reveal .slides section.color--ice {
+.reveal .slides section.coor--ice {
   background-color: #9292A8;
   color: #FFFFFF; }
   .reveal .slides section.color--ice .logo {
@@ -463,7 +463,7 @@ html {
     /*font-size: 0.6em;
     font-weight: bold;*/ }
   .reveal .slides section:not([class*="color--"]) .section {
-    color: #9292A8; }
+    color: #66646B}
   .reveal .slides section .content {
     align-self: center;
     grid-area: content; }
@@ -562,7 +562,7 @@ html {
   margin: 0; }
 
 .reveal .slides section.subsection .description {
-  color: #9292A8;
+  color: #66646B;
   grid-area: description;
   min-height: 4em; }
 
@@ -583,13 +583,13 @@ html {
   width: 100%; }
 
 .reveal .slides section.quote hr {
-  border: solid #9292A8;
+  border: solid #66646B;
   border-width: 1px 0 0 0;
   margin: .8em 0;
   width: 10%; }
 
 .reveal .slides section.quote cite {
-  color: #9292A8;
+  color: #66646B;
   display: block;
   font-size: 1rem; }
 
@@ -616,7 +616,7 @@ html {
   grid-template-rows: 15vmin 1fr; }
 
 .reveal .slides section.team h2 {
-  color: #9292A8;
+  color: #66646B;
   font-size: inherit;
   margin-bottom: 0.5em; }
 
@@ -637,13 +637,13 @@ html {
   margin: 0.6em 0; }
 
 .reveal .slides section.team .role {
-  color: #9292A8;
+  color: #66646B;
   font-size: 0.8em;
   margin: 0.6em 0; }
 
 .reveal .slides section.team .supplement {
   font-size: .8em;
-  color: #9292A8; }
+  color: #66646B; }
 
 @media not all and (max-width: 768px) {
   .reveal .slides section.team .profile:first-child:nth-last-child(1) {
